# mango-v4

./: package.json
lib/client/src/: client.rs
programs/mango-v4/src/: lib.rs
programs/mango-v4/src/accounts_ix/: mod.rs  perp_prune_orders.rs  perp_purge_orders.rs  perp_purge_position.rs  token_conditional_swap_purge.rs
programs/mango-v4/src/instructions/: mod.rs  perp_prune_orders.rs  perp_purge_orders.rs  perp_purge_position.rs  token_conditional_swap_create.rs  token_conditional_swap_purge.rs  token_conditional_swap_start.rs
py/: pyproject.toml
py/mango_client_py/: __init__.py  account_unpacker.py  accounts.py  client.py  oracles.py  param_builder.py  types.py  utils.py
py/mango_client_py/accounts/: bank.py  group.py  mango_account.py
py/mango_client_py/utils/: account_creator.py  connection.py  converters.py
ts/client/scripts/: manageFeeWs.ts  sb-on-demand-crank-utils.ts  sb-on-demand-crank.ts  sb-on-demand-metrics.ts  switchboardTemplates.ts
ts/client/src/: ids.ts
ts/client/src/accounts/: oracle.ts
ts/client/src/utils/: rpc.ts
