[tool.poetry]
name = "mango-client-py"
version = "0.1.0"
description = "A Python client for Mango Markets"
authors = ["manni07 <manni07@example.com>"]
homepage = "https://github.com/blockworks-foundation/mango-v4"
license = "MIT"

[tool.poetry.packages]
include = "mango_client_py"
from = "py"

[tool.poetry.dependencies]
python = "^3.9"
solana = "^0.21.0"
requests = "^2.27.1"
types-requests = "^2.27.8"
anchorpy = "^0.24.0"
solana-py = "^0.28.0"
bs58 = "^0.4.0"
fast-copy = "^2.0.1"
lodash = "^4.17.21"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^21.12b0"
pytest-asyncio = "^0.17.2"
mkdocstrings = "^0.17.0"
mkdocs-material = "^8.1.8"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
